# poplar

./: .gitignore  .readthedocs.yaml  .zenodo.json  README.md  pyproject.toml
docs/source/: conf.py  end_to_end_example.rst  index.rst  requirements.txt
docs/source/_build/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/_build/.doctrees/: api.doctree  environment.pickle  index.doctree
docs/source/_build/.doctrees/autoapi/poplar/: index.doctree
docs/source/_build/.doctrees/autoapi/poplar/distributions/: index.doctree
docs/source/_build/.doctrees/autoapi/poplar/likelihood/: index.doctree
docs/source/_build/.doctrees/autoapi/poplar/nn/: index.doctree
docs/source/_build/.doctrees/autoapi/poplar/nn/networks/: index.doctree
docs/source/_build/.doctrees/autoapi/poplar/nn/plot/: index.doctree
docs/source/_build/.doctrees/autoapi/poplar/nn/rescaling/: index.doctree
docs/source/_build/.doctrees/autoapi/poplar/nn/training/: index.doctree
docs/source/_build/.doctrees/autoapi/poplar/utilities/: index.doctree
docs/source/_build/_sources/: api.rst.txt  index.rst.txt
docs/source/_build/_sources/autoapi/poplar/: index.rst.txt
docs/source/_build/_sources/autoapi/poplar/distributions/: index.rst.txt
docs/source/_build/_sources/autoapi/poplar/likelihood/: index.rst.txt
docs/source/_build/_sources/autoapi/poplar/nn/: index.rst.txt
docs/source/_build/_sources/autoapi/poplar/nn/networks/: index.rst.txt
docs/source/_build/_sources/autoapi/poplar/nn/plot/: index.rst.txt
docs/source/_build/_sources/autoapi/poplar/nn/rescaling/: index.rst.txt
docs/source/_build/_sources/autoapi/poplar/nn/training/: index.rst.txt
docs/source/_build/_sources/autoapi/poplar/utilities/: index.rst.txt
docs/source/_build/autoapi/poplar/: index.html
docs/source/_build/autoapi/poplar/distributions/: index.html
docs/source/_build/autoapi/poplar/likelihood/: index.html
docs/source/_build/autoapi/poplar/nn/: index.html
docs/source/_build/autoapi/poplar/nn/networks/: index.html
docs/source/_build/autoapi/poplar/nn/plot/: index.html
docs/source/_build/autoapi/poplar/nn/rescaling/: index.html
docs/source/_build/autoapi/poplar/nn/training/: index.html
docs/source/_build/autoapi/poplar/utilities/: index.html
examples/: end_to_end_example.ipynb
mlsel/: distributions.py  utilities.py
mlsel/nn/: execute.py  networks.py  plot.py  training.py
poplar/: __init__.py  distributions.py  likelihood.py  selection.py  utilities.py
poplar/nn/: __init__.py  networks.py  plot.py  rescaling.py  training.py
